--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
   />
   <!-- Підключаємо точку входу Vite -->
-  <script type="module" src="../src/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
 </head>
 <body>
 <noscript>
